--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,4 +31,4 @@ spec:
         - name: Vmess_Path
           value: "/yhgs"
         - name: Share_Path
-          value: "/renme"
+          value: "/runemboop"
